--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,8 @@ secret.md
 /temp
 temp/
 
-config/yaml/v1/test.application.yaml
 config/yaml/v1/local.application.yaml
+config/yaml/v1/docker.local.application.yaml
 config/yaml/v1/docker.develop.application.yaml
 config/yaml/v1/docker.release.application.yaml
 config/yaml/v1/docker.production.application.yaml
