--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
     ports:
       - "8080:8080"
     volumes:
+      - ./config/environment/.env.docker.develop:/app/config/environment/.env
+      - ./config/yaml/v1/docker.develop.application.yaml:/app/config/yaml/v1/application.yaml
       - ./:/app
     working_dir: /app
     depends_on:
