--- a/infrastructure/deployment/docker/Dockerfile.production
+++ b/infrastructure/deployment/docker/Dockerfile.production
@@ -25,8 +25,11 @@ WORKDIR /app
 # Copy the compiled binary from the builder stage.
 COPY --from=builder /app/main .
 
-# Copy the configuration directory.
-COPY --from=builder /app/config /app/config
+# Copy and rename the specific environment file.
+COPY --from=builder /app/config/environment/.env.docker.production /app/config/environment/.env
+
+# Copy and rename the specific YAML file.
+COPY --from=builder /app/config/yaml/v1/docker.production.application.yaml /app/config/yaml/v1/application.yaml
 
 # Expose port 8080 to the outside world.
 EXPOSE 8080
