--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3  
 
-      - name: Wait for all checks except this workflow to finish
+      - name: Wait for all checks to finish successfully
         run: |
           # Get the total number of checks (including the current workflow check)
           TOTAL_CHECKS=$(gh pr view ${{ github.event.pull_request.number }} --json statusCheckRollup -q '.statusCheckRollup | length')
@@ -21,17 +21,17 @@ jobs:
           # Exclude this workflow's check by subtracting 1
           EXPECTED_FINISHED_CHECKS=$((TOTAL_CHECKS - 1))
 
-          # Wait until the number of checks that are finished matches the expected number (total - 1)
+          # Wait until the number of successful checks matches the expected number (total - 1)
           while true; do
-            # Get the number of checks that are either "SUCCESS" or "FAILURE" (i.e., completed checks)
-            FINISHED_CHECKS=$(gh pr view ${{ github.event.pull_request.number }} --json statusCheckRollup -q '.statusCheckRollup | map(select(.conclusion == "SUCCESS" or .conclusion == "FAILURE")) | length')
+            # Get the number of successful checks only
+            SUCCESSFUL_CHECKS=$(gh pr view ${{ github.event.pull_request.number }} --json statusCheckRollup -q '.statusCheckRollup | map(select(.conclusion == "SUCCESS")) | length')
   
-            # If the finished checks are equal to the expected count, break out of the loop
-            if [ "$FINISHED_CHECKS" -ge "$EXPECTED_FINISHED_CHECKS" ]; then
-              echo "All required checks passed. Proceeding with the merge."
+            # If the successful checks are equal to the expected count, break out of the loop
+            if [ "$SUCCESSFUL_CHECKS" -ge "$EXPECTED_FINISHED_CHECKS" ]; then
+              echo "All required checks passed successfully. Proceeding with the merge."
               break
             else
-              echo "Waiting for checks to finish..."
+              echo "Waiting for checks to pass successfully..."
               sleep 10
             fi
           done
