--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -20,8 +20,9 @@ jobs:
 
     - name: Set up configuration files
       run: |
-        echo "${{ secrets.DEVELOP_ENV_FILE }}" > ./config/environment/.develop.env
-        echo "${{ secrets.DEVELOP_YAML_FILE }}" > ./config/yaml/v1/develop.application.yaml
+        # Use printf to correctly handle multi-line secrets and special characters
+        printf "%s" "${{ secrets.DEVELOP_ENV_FILE }}" > ./config/environment/.develop.env
+        printf "%s" "${{ secrets.DEVELOP_YAML_FILE }}" > ./config/yaml/v1/develop.application.yaml
 
     - name: Build and Run Develop Services
       run: docker compose up mongodb app-develop -d
