--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -24,8 +24,7 @@ jobs:
 
     - name: Download config files from GitHub Secrets
       run: |
-        echo "$SECRET_ENV_FILE" > ./config/environment/.env.docker.develop
-        echo "$SECRET_YAML_FILE" > ./config/yaml/v1/docker.develop.application.yaml
+        echo "$DEVELOP_YAML_FILE" > ./config/yaml/v1/docker.develop.application.yaml
 
     - name: Build and Run Develop Services
       run: docker compose up mongodb app-develop -d
