--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -7,35 +7,37 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
+    # Checkout the repository
     - uses: actions/checkout@v4
 
+    # Set up Go
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
         go-version: stable
 
+    # Run tests
     - name: Test
       run: go test -v ./...
 
+    # Create config directories
     - name: Create config directory
       run: |
         mkdir -p ./config/environment ./config/yaml/v1
 
+    # Download config files from GitHub Secrets
     - name: Download config files from GitHub Secrets
       run: |
         echo "$DEVELOP_YAML_FILE" > ./config/yaml/v1/docker.develop.application.yaml
 
-     # Debugging step: Check if the file exists and print its content
-    - name: Verify file content
+    # Debugging step: Print the content of the config file
+    - name: Show the content of the config file
       run: |
-        if [ -f ./config/yaml/v1/docker.develop.application.yaml ]; then
-          echo "File exists and its content is:"
-          cat ./config/yaml/v1/docker.develop.application.yaml
-        else
-          echo "File not found!"
-          exit 1
-        fi
+        echo "Content of docker.develop.application.yaml:"
+        cat ./config/yaml/v1/docker.develop.application.yaml
 
+    # Build and Run Develop Services
     - name: Build and Run Develop Services
       run: docker compose up mongodb app-develop -d
