--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -2,9 +2,9 @@ name: Dev workflow
 
 on:
   push:
-    branches: ['dev']
+    branches: ['develop']
   pull_request:
-    branches: ['dev']
+    branches: ['develop']
 
 jobs:
   dev:
