--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
 name: General workflow
 
 on:
-  push:
-    branches: ['**']  
-  # pull_request:
-    # branches: ['**'] 
+  # push:
+    # branches: ['**']  
+  pull_request:
+    branches: ['**'] 
 
 jobs:
   build:
