--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Main workflow
 
 on:
-  push:
-    branches: ['main']
+  # push:
+    # branches: ['main']
   pull_request:
     branches: ['main']
 
@@ -23,3 +23,6 @@ jobs:
 
     - name: Build and Run Production
       run: docker compose up mongodb app-production -d
+
+    - name: Stop Production
+      run: docker stop $(docker ps -a -q)
