--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,4 @@ config/yaml/v1/docker.develop.application.yaml
 config/yaml/v1/docker.release.application.yaml
 config/yaml/v1/docker.production.application.yaml
 
-infrastructure/script/data/repository/mongo/init-mongo.js
-infrastructure/script/data/repository/mongo/init-test-data-mongo.js
+infrastructure/script/data/repository/mongo/.env
