--- a/config/yaml/v1/example/docker.develop.application.example.yaml
+++ b/config/yaml/v1/example/docker.develop.application.example.yaml
@@ -33,8 +33,8 @@ Security:
     # Add other allowed content types as needed
 
 MongoDB:
-  Name: golang_mongodb
-  URI: mongodb://root:root@mongodb:27017/golang_mongodb
+  Name: default_db
+  URI: mongodb://default_user:default_password@mongodb:27017/default_db
 
 Gin:
   Port: 8080
