--- a/config/yaml/v1/example/docker.local.application.example.yaml
+++ b/config/yaml/v1/example/docker.local.application.example.yaml
@@ -33,8 +33,8 @@ Security:
     # Add other allowed content types as needed
 
 MongoDB:
-  Name: golang_mongodb
-  URI: mongodb://root:root@localhost:27017/golang_mongodb
+  Name: default_db
+  URI: mongodb://default_user:default_password@localhost:27017/default_db
 
 Gin:
   Port: 8080
@@ -65,6 +65,6 @@ Email:
   SMTP_Port: your port
   Client_Origin_Url: "http://localhost:8080/api/" # put your own client URL
   User_Confirmation_Template_Name: verificationCode.html
-  User_Confirmation_Template_Path: pkg/dependency/factory/email/template    
+  User_Confirmation_Template_Path: pkg/dependency/factory/email/template  
   Forgotten_Password_Template_Name: resetPassword.html
-  Forgotten_Password_Template_Path: pkg/dependency/factory/email/template  
+  Forgotten_Password_Template_Path: pkg/dependency/factory/email/template
