--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       - mongodbDATA:/data/db
       - ./infrastructure/script/data/repository/mongo/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js
       - ./infrastructure/script/data/repository/mongo/init-test-data-mongo.js:/docker-entrypoint-initdb.d/init-test-data-mongo.js
+      - ./infrastructure/script/data/repository/mongo/.env:/docker-entrypoint-initdb.d/.env  
+    env_file:
+      - ./infrastructure/script/data/repository/mongo/.env 
     networks:
       - application-network
 
