--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -23,24 +23,21 @@ jobs:
 
     - name: Create .env file for MongoDB
       run: |
-        # Dynamically generate the .env file for MongoDB using secrets
         echo "MONGO_INITDB_DATABASE=${{ secrets.MONGO_INITDB_DATABASE }}" > infrastructure/script/data/repository/mongo/.env
         echo "MONGO_INITDB_ROOT_USERNAME=${{ secrets.MONGO_INITDB_ROOT_USERNAME }}" >> infrastructure/script/data/repository/mongo/.env
         echo "MONGO_INITDB_ROOT_PASSWORD=${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
 
-    - name: Verify .env File Contents
-      run: |
-        echo "Contents of .env file:"
-        cat infrastructure/script/data/repository/mongo/.env
-    
     - name: Build and Run Develop
       run: docker compose up mongodb app-develop -d
 
-    - name: Check MongoDB Logs
+    - name: Wait for 30 seconds
+      run: sleep 30
+
+    - name: Logs for MongoDB
       run: docker logs mongodb
 
-    - name: Debug MongoDB Environment Variables
-      run: docker exec mongodb env
+    - name: Logs for App-Develop
+      run: docker logs app-develop
 
     - name: Stop Develop
       run: docker stop $(docker ps -a -q)
