--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -28,16 +28,10 @@ jobs:
         echo "MONGO_INITDB_ROOT_PASSWORD=${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
 
     - name: Build and Run Develop
-      run: docker compose up mongodb app-develop 
+      run: docker compose up mongodb app-develop -d
 
-    - name: Wait for 10 seconds
-      run: sleep 10
-
-    # - name: Logs for MongoDB
-    #   run: docker logs mongodb
-
-    # - name: Logs for App-Develop
-    #   run: docker logs app-develop
+    - name: Logs for App-Develop
+      run: docker logs app-develop
 
     - name: Stop Develop
       run: docker stop $(docker ps -a -q)
