--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -28,7 +28,10 @@ jobs:
         echo "MONGO_INITDB_ROOT_PASSWORD=${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
 
     - name: Build and Run Develop
-      run: docker compose up mongodb app-develop 
+      run: |
+        docker compose up -d mongodb app-develop
+        docker logs -f app-develop
+
 
     - name: Logs for App-Develop
       run: docker logs app-develop
