--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,12 @@ jobs:
       run: |
         echo "${{ secrets.DOCKER_PRODUCTION_APPLICATION_CONFIG_YAML }}" | base64 -d > config/yaml/v1/docker.production.application.yaml
 
+    - name: Create .env file for MongoDB
+      run: |
+        echo "MONGO_INITDB_DATABASE=${{ secrets.MONGO_INITDB_DATABASE }}" > infrastructure/script/data/repository/mongo/.env
+        echo "MONGO_INITDB_ROOT_USERNAME=${{ secrets.MONGO_INITDB_ROOT_USERNAME }}" >> infrastructure/script/data/repository/mongo/.env
+        echo "MONGO_INITDB_ROOT_PASSWORD=${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
+
     - name: Build and Run Production
       run: docker compose up mongodb app-production -d
 
