Add a list of containers

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -30,5 +30,8 @@ jobs:
     - name: Build and Run Develop
       run: docker compose up mongodb app-develop -d
 
+    - name: List All Running Containers
+      run: docker ps
+
     - name: Stop Develop
       run: docker stop $(docker ps -a -q)
