--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -29,8 +29,11 @@ jobs:
 
     - name: Build and Run Develop
       run: |
-        docker compose up mongodb -d
-        docker compose up app-develop
+        docker compose up mongodb app-develop -d
+
+    - name: Show App Develop Logs
+      run: |
+        docker logs --tail 100 app-develop
 
     - name: List All Running Containers
       run: docker ps
