--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Build and Run Develop
       run: |
         docker compose up mongodb app-develop -d
-        docker logs --tail 100 app-develop
+        docker logs --tail 100 go-blog-platform-app-develop-1
 
     - name: List All Running Containers
       run: docker ps
