--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -30,6 +30,10 @@ jobs:
     - name: Build and Run Develop
       run: |
         docker compose up mongodb app-develop -d
+
+    - name: Show Develop Logs
+      run: |
+        # docker logs --tail 100 mongodb
         docker logs --tail 100 go-blog-platform-app-develop-1
 
     - name: List All Running Containers
