--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -30,11 +30,14 @@ jobs:
     - name: Build and Run Develop
       run: |
         docker compose up mongodb app-develop -d
+        docker logs go-blog-platform-app-develop-1
+
 
     - name: Show Develop Logs
       run: |
+        sleep 5  # Wait for 5 seconds to allow containers to start up
         # docker logs --tail 100 mongodb
-        docker logs --tail 100 go-blog-platform-app-develop-1
+        docker logs go-blog-platform-app-develop-1
 
     - name: List All Running Containers
       run: docker ps
