--- a/config/yaml/v1/example/docker.production.application.example.yaml
+++ b/config/yaml/v1/example/docker.production.application.example.yaml
@@ -37,6 +37,7 @@ MongoDB:
   URI: mongodb://default_user:default_password@mongodb:27017/default_db
 
 Gin:
+  Mode: release
   Port: 8080
   Allow_Origins: http://localhost:8080
   Allow_Credentials: true
