Refine mongodb scripts, refactoring

--- a/infrastructure/script/data/repository/mongo/example/.example.env
+++ b/infrastructure/script/data/repository/mongo/example/.example.env
@@ -1,3 +1,16 @@
-MONGO_INITDB_DATABASE=default_db   
+# MongoDB Initialization
+MONGO_INITDB_DATABASE=default_db
 MONGO_INITDB_ROOT_USERNAME=default_user
 MONGO_INITDB_ROOT_PASSWORD=default_password
+
+# Admin User Configuration
+ADMIN_EMAIL=default_email@gmail.com
+# Precomputed bcrypt hash for the admin password.
+# IMPORTANT: This must be a bcrypt hash and wrapped in quotes.
+# The following hash corresponds to the password 'somepassword'.
+ADMIN_HASHED_PASSWORD='2b$12$2TnOFrMkPCzvGQZ.PjwdHenVH7kiReJKvXTkp0LPeAC9DnNt8m3ze'
+
+# For GitHub Secrets:
+# In GitHub Secrets, you do NOT need to wrap the bcrypt hash in quotes.
+# Just use the plain hash string like this:
+# 2b$12$2TnOFrMkPCzvGQZ.PjwdHenVH7kiReJKvXTkp0LPeAC9DnNt8m3ze
