--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -5,8 +5,14 @@ on:
     branches: [ "develop" ]
 
 jobs:
+  setup:
+    name: Set up environment and run lint/tests
+    uses: ./.github/workflows/common-setup.yml
+  
   build:
+    name: Build and Run Develop
     runs-on: ubuntu-latest
+    needs: setup  
     steps:
     - uses: actions/checkout@v4
 
@@ -14,14 +20,6 @@ jobs:
       uses: actions/setup-go@v5
       with:
         go-version: stable
-
-    - name: Run GolangCI-Lint
-      uses: golangci/golangci-lint-action@v6
-      with:
-        version: v1.60
-
-    - name: Unit tests
-      run: go test ./test/unit/...
 
     - name: Decode and Create YAML File
       run: |
