--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,14 +1,18 @@
 name: Release (pre-Production) workflow
 
 on:
-  # push:
-    # branches: [ "release" ]
   pull_request:
     branches: [ "release" ]
 
 jobs:
+  setup:
+    name: Set up environment and run lint/tests
+    uses: ./.github/workflows/common-setup.yml  
+  
   build:
+    name: Build and Run Release
     runs-on: ubuntu-latest
+    needs: setup
     steps:
     - uses: actions/checkout@v4
 
@@ -16,14 +20,6 @@ jobs:
       uses: actions/setup-go@v5
       with:
         go-version: stable
-
-    - name: Run GolangCI-Lint
-      uses: golangci/golangci-lint-action@v6
-      with:
-        version: v1.60
-
-    - name: Unit tests
-      run: go test ./test/unit/...
 
     - name: Decode and Create YAML File
       run: |
