--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -34,8 +34,8 @@ jobs:
     - name: Build and Run Develop
       run: |
         docker compose up mongodb app-develop -d
-        sleep 30  # Wait for 30 seconds to allow containers to start up
-        docker logs go-blog-platform-app-develop-1
+        sleep 7  # Wait for 7 seconds to allow containers to start up
+        docker compose logs go-blog-platform-app-develop-1
 
     - name: List All Running Containers
       run: docker ps
