--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,18 +1,14 @@
 name: Develop workflow
 
 on:
+ # push:
+    # branches: [ "develop" ]
   pull_request:
     branches: [ "develop" ]
 
 jobs:
-  setup:
-    name: Set up environment and run lint/tests
-    uses: ./.github/workflows/common-setup.yml
-  
   build:
-    name: Build and Run Develop
     runs-on: ubuntu-latest
-    needs: setup  
     steps:
     - uses: actions/checkout@v4
 
@@ -35,7 +31,7 @@ jobs:
       run: |
         docker compose up mongodb app-develop -d
         sleep 7  # Wait for 7 seconds to allow containers to start up
-        docker compose logs app-develop
+        docker logs go-blog-platform-app-develop-1
 
     - name: List All Running Containers
       run: docker ps
