--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,14 @@
 name: Main workflow
 
 on:
+  # push:
+    # branches: ['main']
   pull_request:
     branches: ['main']
 
 jobs:
-  setup:
-    name: Set up environment and run lint/tests
-    uses: ./.github/workflows/common-setup.yml
-
   production:
-    name: Build and Run Production
     runs-on: ubuntu-latest
-    needs: setup
     steps:
     - uses: actions/checkout@v4
 
