--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -30,8 +30,21 @@ jobs:
     - name: Build and Run Develop
       run: |
         docker compose up mongodb app-develop -d
-        sleep 7  # Wait for 7 seconds to allow containers to start up
+        sleep 15  # Wait for 15 seconds to allow containers to start up
         docker logs go-blog-platform-app-develop-1
+
+    - name: Check MongoDB Logs
+      run: docker logs mongodb
+
+    - name: Wait for MongoDB to be Ready
+      run: |
+        for i in {1..10}; do
+          docker exec mongodb mongo --eval "db.runCommand({ping: 1})" && break || sleep 5
+        done
+
+    - name: Check App-Develop Logs
+      run:  docker logs go-blog-platform-app-develop-1
+
 
     - name: List All Running Containers
       run: docker ps
