--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -30,8 +30,6 @@ jobs:
     - name: Build and Run Develop
       run: |
         docker compose up mongodb app-develop -d
-        sleep 15  # Wait for 15 seconds to allow containers to start up
-        docker logs go-blog-platform-app-develop-1
 
     - name: Check MongoDB Logs
       run: docker logs mongodb
@@ -43,7 +41,9 @@ jobs:
         done
 
     - name: Check App-Develop Logs
-      run:  docker logs go-blog-platform-app-develop-1
+      run: |
+        docker logs mongodb
+        docker logs go-blog-platform-app-develop-1
 
     - name: List All Running Containers
       run: docker ps
