--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -28,11 +28,11 @@ jobs:
     - name: Start MongoDB
       run: docker compose up mongodb -d
 
-    # - name: Wait for MongoDB to be Ready
-    #   run: |
-    #     for i in {1..10}; do
-    #       nc -zv localhost 27017 && break || sleep 5
-    #     done || exit 1
+    - name: Wait for MongoDB to be Ready
+      run: |
+        for i in {1..10}; do
+          nc -zv localhost 27017 && break || sleep 5
+        done || exit 1
 
     - name: Start Application
       run: docker compose up app-develop -d
