--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Build and Run Develop
       run: |
-        docker compose up mongodb
+        docker compose up mongodb -d
         docker compose up app-develop -d
 
         sleep 7  # Wait for 7 seconds to allow containers to start up
