--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -29,8 +29,12 @@ jobs:
 
     - name: Build and Run Develop
       run: |
+        docker compose up mongodb -d
+        sleep 7  # Wait for 7 seconds to allow container to start up
+       
+        docker compose up app-develop -d
+        sleep 7  # Wait for 7 seconds to allow container to start up
         docker compose up mongodb app-develop -d
-        sleep 7  # Wait for 7 seconds to allow containers to start up
         docker logs go-blog-platform-app-develop-1
 
     - name: List All Running Containers
