--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -42,6 +42,8 @@ jobs:
       run: docker logs mongodb
 
     - name: Show App Logs
+      sleep 7  # Wait for 7 seconds to allow container to start up
+
       run: docker logs go-blog-platform-app-develop-1
 
     - name: List All Running Containers
