--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -43,7 +43,9 @@ jobs:
 
     - name: Show App Logs
       sleep 4  # Wait for 4 seconds to allow container to start up
-      run: docker logs go-blog-platform-app-develop-1
+      run: |
+        sleep 4  # Wait for 4 seconds to allow container to start up
+        docker logs go-blog-platform-app-develop-1
 
     - name: List All Running Containers
       run: docker ps
